# Kaiagotchi

./: .coverage  .gitignore  LICENSE.md  MANIFEST.in  Makefile  README-google.md  README.md  dashboard_fix_plan.md  pyproject.toml  requirements.txt  run_kaiagotchi.sh  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
kaiagotchi/: __init__.py  __main__.py  agent.py  automata.py  bettercap.py  cli.py  config.py  config.toml  defaults.toml  exceptions.py  grid.py  identity.py  log.py  log_config.py  manager.py  run_kaiagotchi.py  security.py  system.py  utils.py  voice.py
kaiagotchi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kaiagotchi/agent/: __init__.py  agent.py  base.py  decision_engine.py  monitoring_agent.py
kaiagotchi/ai/: __init__.py  epoch.py  reward.py
kaiagotchi/config/: __init__.py  config.py  defaults.toml  manager.py
kaiagotchi/config/examples/: config.toml
kaiagotchi/core/: __init__.py  automata.py  events.py  exceptions.py  hardware.py  manager.py  system.py  utils.py
kaiagotchi/data/: __init__.py  system_types.py
kaiagotchi/fs/: __init__.py
kaiagotchi/google/: cmd.py
kaiagotchi/locale/: voice.pot
kaiagotchi/mesh/: __init__.py  advertiser.py  peer.py  utils.py  wifi.py
kaiagotchi/net/: pcap_parser.py
kaiagotchi/network/: __init__.py  action_manager.py  interface_monitor.py  pcap_parser.py  protocols.py  utils.py
kaiagotchi/network/integrations/: bettercap.py
kaiagotchi/plugins/: __init__.py  base.py  cmd.py  manager.py
kaiagotchi/plugins/default/: auto-tune.py  auto-update.py  auto_backup.py  bt-tether.py  cache.py  example.py  fix_services.py  gdrivesync.py  gpio_buttons.py  gps.py  gps_listener.py  grid.py  logtail.py  memtemp.py  ohcapi.py  pisugarx.py  pwncrack.py  session-stats.py  switcher.py  ups_lite.py  webcfg.py  webgpsmap.html  webgpsmap.py  wigle.py  wittypi.py  wpa-sec.py
kaiagotchi/storage/: file_io.py  last_session.py  persistent_mood.py  persistent_network.py  utils_time.py
kaiagotchi/storage/scratch/: clean_pcaps.py
kaiagotchi/ui/: __init__.py  components.py  display.py  faces.py  fonts.py  splash.py  state.py  terminal_display.py  view.py
kaiagotchi/ui/hw/: __init__.py  base.py  dummydisplay.py
kaiagotchi/ui/voice/: __init__.py  voice.py
kaiagotchi/ui/web/: __init__.py  handler.py  server.py
kaiagotchi/ui/web/templates/: base.html
pwnagotchi/: __init__.py  defaults.toml  log.py  log_config.py  utils.py
pwnagotchi/plugins/default/: webgpsmap.py  wpa-sec.py
scripts/: BR.sh  apply_replacements.py  check_wireless.py  dev-setup.ps1  language.sh  reanalyze_pcap.py  setup_wireless.sh  sys  test_wireless.sh
tests/: conftest.py  test_automata_thoughts.py  test_chatter_persistence.py  test_decision_engine.py  test_emotion_loop.py  test_imports.py  test_interface_manager.py  test_pcap_and_recon.py  test_plugins.py  test_ui_force_redraw.py  test_ui_integration.py  test_ui_redesign.py
